[refactor] code convention에 따른 수정